--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>AVALIAÇÃO P2 2022</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
